// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MiqEventDefinitionStructuredList should render event definition info structured list 1`] = `
<FeatureToggle(StructuredListWrapper)
  ariaLabel="Structured list"
  className="miq-structured-list miq_event_definition_info"
>
  <MiqStructuredListBody
    clickEvents={false}
    mode="miq_event_definition_info"
    rows={
      Array [
        Object {
          "label": "Event Group",
          "value": "bar",
        },
        Object {
          "label": "Attached to Policy",
          "value": "policy description",
        },
      ]
    }
  />
</FeatureToggle(StructuredListWrapper)>
`;

exports[`MiqEventDefinitionStructuredList should render event definition policy structured list 1`] = `
<FeatureToggle(StructuredListWrapper)
  ariaLabel="Structured list"
  className="miq-structured-list miq_event_definition_policy"
>
  <MiqStructuredListBody
    clickEvents={false}
    mode="miq_event_definition_policy"
    onClick={[MockFunction]}
    rows={
      Array [
        Object {
          "cells": Array [
            Object {
              "icon": "pficon pficon-warning-triangle-o",
              "value": "Policy description",
            },
          ],
          "onclick": Object {
            "url": "/miq_policy/show/1",
          },
          "title": "View this Model Alert",
        },
      ]
    }
  />
</FeatureToggle(StructuredListWrapper)>
`;
